# coding_hack

./: .gitignore  README.md  pyproject.toml
reward_hack_eval/: label_reward_hacking.py
rl_setup/: README.md  __init__.py  checks.py  cli.py  create_challenge_test_set.py  data_prep.py  detector.py  export_trl.py  io_utils.py  preferences.py  rejection_sampling.py  report.py  reward.py  run_api_first_pipeline.sh  schemas.py  vertex_openai_proxy.py
rl_setup/artifacts/: accepted_episodes.jsonl  episodes.jsonl  preference_pairs.jsonl  rejected_episodes.jsonl  scored_episodes.jsonl  splits.json  summary_report.json  summary_report.md
rl_setup/colab/: qwen_trajectory_preference.md
rl_setup/config/: api_first.json
rl_setup/eval/: qwen_vs_gemini_swebench.md  vertex_qwen_swebench.md
rl_setup/grpo/: README.md  __init__.py  eval_grpo_policy.py  prepare_grpo_dataset.py  proposal_reward.py  requirements-colab.txt  rewards.py  summarize_task_eval.py  train_grpo.py  train_reward_model.py
runs/qwen25-coder-7b-instruct-preference-pair-rh3-nonhack12-sample/: eval_results.jsonl  manifest.json  predictions.eval.jsonl  predictions.eval.summary.json  proposal_eval_results.json  proposal_eval_results.md  reward_hack_labels.jsonl  sampled_instances.jsonl
runs/qwen25-coder-7b-instruct-rh3-nonhack12-sample/: eval_results.jsonl  manifest.json  predictions.eval.jsonl  predictions.eval.summary.json  proposal_eval_results.json  proposal_eval_results.md  reward_hack_labels.jsonl  sampled_instances.jsonl
scripts/: batch_reward_hack_pipeline.sh
src/benchmark_agents/: __main__.py  cli.py
(+49 files in other folders)
